--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script defer src="https://kit.fontawesome.com/8ebc7a45f6.js" crossorigin="anonymous"></script>
 </head>
 <style>
       .custom-card {
@@ -60,6 +61,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(8, 57, 102);">
         <div class="container px-4">
             <a class="navbar-brand" href="/">
+                <i class="fa-solid fa-house-user"></i>
                 <span style="color:#ffffff; font-size:26px; font-weight:bold; letter-spacing: 1px;">House Hunter</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -68,9 +70,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/code">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pricing">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pricing" id="services">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="/faq">Contact Us</a></li>
                 </ul>
