--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
-                    <img src="/assets/1.jpeg" class="w-100 d-block img-fluid" alt="First slide">
+                    <img src="assets/1.jpeg" class="w-100 d-block img-fluid" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Find Your Dream Home</h5>
                         <p>Scroll and let us help you Find a Home</p>
                       </div>
                     </div>
                 <div class="carousel-item">
-                    <img src="/assets/2.jpeg" class="w-100 d-block" alt="Second slide">
+                    <img src="assets/2.jpeg" class="w-100 d-block" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/3.jpeg" class="w-100 d-block" alt="Third slide">
+                    <img src="assets/3.jpeg" class="w-100 d-block" alt="Third slide">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
