--- a/index.html
+++ b/index.html
@@ -129,16 +129,12 @@
            
      </div>
      <div class="row justify-content-center" style="text-align: center; margin: 50px;">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit tristique libero,
-        vel imperdiet turpis pellentesque vel. Vestibulum mollis hendrerit nisi, sed consectetur nunc mattis at. Nulla in lacinia lacus.
-        Morbi venenatis, nisl eu mollis accumsan, velit velit placerat velit, ut congue est enim vel quam.
-        Duis luctus diam eu purus fermentum ultricies. Sed feugiat gravida justo, id tristique sapien tristique in.
-        Nullam eu lectus vitae quam rutrum scelerisque. Sed vel mauris non enim tempor placerat sed sit amet velit.
-        Aliquam in libero vel nulla malesuada tincidunt vitae ac tellus. Donec sed faucibus turpis.
-        Integer pharetra dolor eget elit cursus tristique.</p>
+        <p>HouseHunter is a dynamic and user-friendly website designed to simplify the search for the perfect home
+        based on users' specific needs and locations. Our platform caters to a diverse range of preferences,type of residence, area amenities, and more.
+         HouseHunter helps potential renters and buyers navigate the often complex and stressful process of finding a new home with ease and confidence.</p>
     </div>
   <!-- Bootstrap JavaScript Libraries -->
-  <script src="/js/script.js"></script>
+  <script defer src="/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
     </script>
