--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
          HouseHunter helps potential renters and buyers navigate the often complex and stressful process of finding a new home with ease and confidence.</p>
     </div>
   <!-- Bootstrap JavaScript Libraries -->
-  <script defer src="js/script.js"></script>
+  <script src="js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
     </script>
