--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pricing" id="services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/faq">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="" id="services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="" id="About">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="" id="contact">Contact Us</a></li>
                 </ul>
             </div>
         </div>
