--- a/index.html
+++ b/index.html
@@ -96,9 +96,17 @@
                     </div>
                 <div class="carousel-item">
                     <img src="assets/2.jpeg" class="w-100 d-block" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Like This?</h5>
+                        <p>Find More Below</p>
+                      </div>
                 </div>
                 <div class="carousel-item">
                     <img src="assets/3.jpeg" class="w-100 d-block" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Surely This Gets your Attention</h5>
+                        <p>Book and Visit us NOW!!</p>
+                      </div>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
