--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="" id="services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="" id="About">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="" id="about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="" id="contact">Contact Us</a></li>
                 </ul>
             </div>
@@ -96,9 +96,17 @@
                     </div>
                 <div class="carousel-item">
                     <img src="assets/2.jpeg" class="w-100 d-block" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Like This?</h5>
+                        <p>Find More Below</p>
+                      </div>
                 </div>
                 <div class="carousel-item">
                     <img src="assets/3.jpeg" class="w-100 d-block" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Surely This Gets your Attention</h5>
+                        <p>Book and Visit us NOW!!</p>
+                      </div>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
