--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 
     
     <h4>Select Your Area</h4>
+    <h5>After booking, please contact the relevant caretaker for location details.Thank You.</h5>
    <div>
     <button class="btn" id="kil">Kilimani</button>
     <button class="btn" id="park">Parklands</button>
@@ -139,7 +140,8 @@
      <div class="row justify-content-center" style="text-align: center; margin: 50px;">
         <p>HouseHunter is a dynamic and user-friendly website designed to simplify the search for the perfect home
         based on users' specific needs and locations. Our platform caters to a diverse range of preferences,type of residence, area amenities, and more.
-         HouseHunter helps potential renters and buyers navigate the often complex and stressful process of finding a new home with ease and confidence.</p>
+         HouseHunter helps potential renters and buyers navigate the often complex and stressful process of finding a new home with ease and confidence.
+        <br> We apologize for only having five locations for now, we will update soon.Thank you.</p>
     </div>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="js/script.js"></script>
