--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       .custom-card {
         display: flex; /* Ensuring flex is definitely applied */
         flex-wrap: wrap;
-        background-color: white;
+        background-color:transparent;
         }
     .custom-card > div {
         flex: 0 0 33.33%;
@@ -55,6 +55,9 @@
 	overflow:hidden ;
 	position: relative;
     margin: 5px;
+}
+body{
+    background-color: #4d5e5a;
 }
 </style>
 <body>
