--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       .custom-card {
         display: flex; /* Ensuring flex is definitely applied */
         flex-wrap: wrap;
-        background-color: white;
+        background-color:transparent;
         }
     .custom-card > div {
         flex: 0 0 33.33%;
@@ -56,6 +56,9 @@
 	position: relative;
     margin: 5px;
 }
+body{
+    background-color: #4d5e5a;
+}
 </style>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(8, 57, 102);">
@@ -72,7 +75,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="" id="services">Services</a></li>
-               
+              
                     <li class="nav-item"><a class="nav-link" href="" id="contact">Contact Us</a></li>
                 </ul>
             </div>
